Unwind the HUB_BASE conundrum